--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/*    Website Layout    */
+
 hr {
   margin-top: 0;
   margin-bottom: 0;
@@ -12,8 +14,4 @@ hr {
   z-index: 1;
 }
 
-.aspectRatioBox {
-  padding-top: calc(2 / 3 * 100%); /* aspect ratio 3:2 */
-  background-size: cover;
-  background-position: center;
-}
+/*  End Website Layout  */
